--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </div>
 
     <!-- Botão WhatsApp Flutuante -->
-    <a href="https://wa.me/5573982383397" id="whatsapp-btn" class="whatsapp-btn" target="_blank">
+    <a href="https://wa.me/5573982383397?text=Olá! Vim através do site da NEXTLEVEL.%0A%0AGostaria de mais informações sobre seus serviços e solicitar um orçamento." id="whatsapp-btn" class="whatsapp-btn" target="_blank">
         <i class="fab fa-whatsapp"></i>
         <span>Fale conosco</span>
     </a>
